# pvault

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYRIGHT  README.md  SECURITY.md  THREAT_MODEL.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.pt-BR.md  COMPATIBILITY.md  EXTERNAL_RESTORE.md  FORMAT.md  RELEASES.md  ROADMAP.pt-BR.md  pvault.1
fuzz/: fuzz_cbor.c  fuzz_header.c  fuzz_recovery.c
fuzz/seeds/: README.md
fuzz/seeds/fuzz_cbor/: empty-vault.b64
fuzz/seeds/fuzz_header/: magic.b64
fuzz/seeds/fuzz_recovery/: valid-recovery.b64
include/pvault/: pvault.h
packaging/: PKGBUILD
scripts/: check-publication.sh  ci-build.sh  external-restore-check-result.sh  external-restore-prepare.sh  external-restore-run.sh  fuzz-smoke.sh  reproducible-build.sh  restore-drill.sh  test-live-x11-i3.sh  test-real-wayland.sh  test-real-x11.sh
src/: arena.c  cbor_codec.c  cli.c  cli.h  clip_main.c  clipboard.c  clipboard.h  config.c  crypto.c  error.c  main.c  model.c  pvault_internal.h  recovery.c  secure.c  shell.c  store.c  tty.c  ui.c  util.c
tests/: clipboard_policy_test.c  lsan_probe.c  lsan_probe.py  secure_alloc_tracker.c  test.h  test_backup_retention.c  test_cbor.c  test_compat.c  test_config.c  test_crypto.c  test_main.c  test_recovery.c  test_rescue.c  test_store.c  test_store_faults.c  test_store_security.c  test_util.c
tests/compat/: README.md  pvault-v1-synthetic.json  pvault_v1_vector.py
tests/integration/: README.md  clipboard_driver.c  fake_clipboard_owner.c  fake_rofi.c  pty_harness.py  restore_drill.py  run.py  signal_launcher.c  test_cli_pty.py  test_clipboard.py
tests/manual/: external_restore_fixture.py  external_restore_protocol.py  test_external_restore_protocol.py  test_live_x11_i3.py
tests/system/: README.md  test_wlcopy_wayland.py  test_xclip_x11.py  x11_selection_owner.c
